spiceparser/netlist.h

struct extract_st;
struct spice_st;
typedef struct geninput_st
{
  int magic;
  int other[4];
}geninput_t;
/* internal definition of netlist type */
typedef union netlist_input_un
{
  void *p;
  geninput_t *generic;
  struct spice_st *spice;
  struct extract_st *ext;
}netlist_input_t;
typedef union dev_input_un
{
  void *p;
  struct m_st *spice_fet;
  struct c_st *spice_cap;
  void *spice_res;
  void *extract_fet;
  void *extract_cap;
  void *extract_res;
}dev_input_t;
typedef struct termptr_st
{
  unsigned devi:  TERMPTR_BITS_DEVI;
  unsigned nonnull: 1;
  unsigned termi: TERMPTR_BITS_TERMI;
  unsigned devt:  TERMPTR_BITS_DEVT;
}termptr_t;
/**** entities:  

      an entity_t describes and holds a list of devices 
      
      the flexible device structure is formatted as follows 
      {
      dev_input_t parent;
      termptr_t terms[e->qterms];
      eqn_t vals[e->qvals];
      rest....
      }

*****/

typedef struct entity_st
{
  list_t l;
  int qterms;   /* q terms of in generic structure */
  int qvals;    /* q values in generic structure   */
  int qcount;   /* counted number, low level       */
  int id;       /* uniq device id                  */
  int qother;   /* bytes of other info in dev structure */
  char sym[8];  /* symbolic name                   */
}entity_t;
typedef struct devnode_st
{
  dev_input_t parent;
  termptr_t n[DEVT_NODE_TERMS];
}devnode_t;
typedef struct netlist_st
{
  netlist_input_t input; /* where the netlist came from                   */
  void *eqn_mem; /* where we store our equations */
  int iscopy;   /* this is set if we shouldn't free/modify some structures */
  names_t *names; /* key off of node indices                              */
  eqnlist_t eqnl;
  int qe; /* valid entities */
  entity_t e[TERMPTR_MAX_DEVT];  
}netlist_t;
typedef struct netlistfunc_st
{
  netlist_t *nl;
  entity_t *entity;

  /* for merge */
  int qcmp;
  int (*sum)(struct netlistfunc_st *nm,int ia, int ib);
  void (*tocompare)(struct netlistfunc_st *nm, int index, void *data);

  /* for distribute */
  int qproperties;
  void (*accumulate)(struct netlistfunc_st *nm, int devi, int termi, float *nodeprops);
  void (*distribute)(struct netlistfunc_st *nm, int devi, int termi, float *nodeprops);
  
  /* for fixup */
  void (*fixup)(struct netlistfunc_st *nm, termptr_t t);

}netlistfunc_t;
typedef struct netlist_param_st
{
  struct netlist_param_st *next;
  char str[4];
}netlist_param_t;
typedef enum netprint_en
{
  netprint_none,
  netprint_name,
  netprint_index,
  netprint_ptr,
  netprint_nname,
  netprint_debug
}netprint_t;
/******* netlist.c ********/
void netlist_init(netlist_t *nl);
int netlist_register_entity (netlist_t *nl, int id, int qterms, int qvals, int qrest, char *sym, int othersize);
int netlist_print_nodep(netlist_t *n, netprint_t grp, void *filefp, void *gn, char *str);
netlist_input_t netlist_parse_input(scanner_t *scan, char *type, netlist_param_t *params);
void netlist_release(netlist_t *nl);
void netlist_free(netlist_t *nl);
int netlist_newdev_fromnode(netlist_t *nl, int devt, dev_input_t parent , termptr_t n[]);
void netlist_debug_input(void *dbg_fp, netlist_input_t p);
void netlist_debug(void *dbg_fp, netlist_t *nl);
void netlist_debug_(void *dbg_fp, netlist_t *nl, int eval);
termptr_t netlist_node(netlist_t *nl, char *str, void *parent);
termptr_t netlist_termptr(int dev, int term, int type);
int netlist_node_termptr(netlist_t *nl, termptr_t t);
int netlist_findnode(netlist_t *nl, char *str);
void netlist_merge(netlistfunc_t *nm);
void netlist_distribute(netlistfunc_t *nm);
void netlist_fixup(netlistfunc_t *nm);
void netlist_eval(netlist_t *n);
void netlist_eqn_begin(netlist_t *nl);
void netlist_eqn_end(netlist_t *nl);
netlist_t *netlist_copyisher(netlist_t *in, int extrasize, int extrasizes[]);
void netlist_copyfree(netlist_t *nl);
/********* netlist_spice.c *********/

struct spice_st *spice_new(scanner_t *scan);
void     spice_release(struct spice_st *sp);
void     spice_build(netlist_t *nl);
void     spice_count(netlist_t *nl);
void     spice_debug(void *dbg_fp, struct spice_st *sp);