spiceparser/spiceparser.py


struct_entity_st.__slots__ = [
    'l',
    'qterms',
    'qvals',
    'qcount',
    'id',
    'qother',
    'sym',
]
struct_entity_st._fields_ = [
    ('l', list_t),
    ('qterms', c_int),
    ('qvals', c_int),
    ('qcount', c_int),
    ('id', c_int),
    ('qother', c_int),
    ('sym', c_char * 8),
]

entity_t = struct_entity_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 142

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 185
class struct_devnode_st(Structure):
    pass

struct_devnode_st.__slots__ = [
    'parent',
    'n',
]
struct_devnode_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * 2),
]

devnode_t = struct_devnode_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 185

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 197
class struct_netlist_st(Structure):
    pass

struct_netlist_st.__slots__ = [
    'input',
    'eqn_mem',
    'iscopy',
    'names',
    'eqnl',
    'qe',
    'e',
]
struct_netlist_st._fields_ = [
    ('input', netlist_input_t),
    ('eqn_mem', POINTER(None)),
    ('iscopy', c_int),
    ('names', POINTER(names_t)),
    ('eqnl', eqnlist_t),
    ('qe', c_int),
    ('e', entity_t * ((1 << 4) - 1)),
]

netlist_t = struct_netlist_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 197

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 203
class struct_netlistfunc_st(Structure):
    pass

struct_netlistfunc_st.__slots__ = [
    'nl',
    'entity',
    'qcmp',
    'sum',
    'tocompare',
    'qproperties',
    'accumulate',
    'distribute',
    'fixup',
]
struct_netlistfunc_st._fields_ = [
    ('nl', POINTER(netlist_t)),
    ('entity', POINTER(entity_t)),
    ('qcmp', c_int),
    ('sum', CFUNCTYPE(UNCHECKED(c_int), POINTER(struct_netlistfunc_st), c_int, c_int)),
    ('tocompare', CFUNCTYPE(UNCHECKED(None), POINTER(struct_netlistfunc_st), c_int, POINTER(None))),
    ('qproperties', c_int),
    ('accumulate', CFUNCTYPE(UNCHECKED(None), POINTER(struct_netlistfunc_st), c_int, c_int, POINTER(c_float))),
    ('distribute', CFUNCTYPE(UNCHECKED(None), POINTER(struct_netlistfunc_st), c_int, c_int, POINTER(c_float))),
    ('fixup', CFUNCTYPE(UNCHECKED(None), POINTER(struct_netlistfunc_st), termptr_t)),
]

netlistfunc_t = struct_netlistfunc_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 221

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 223
class struct_netlist_param_st(Structure):
    pass

struct_netlist_param_st.__slots__ = [
    'next',
    'str',
]
struct_netlist_param_st._fields_ = [
    ('next', POINTER(struct_netlist_param_st)),
    ('str', c_char * 4),
]

netlist_param_t = struct_netlist_param_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 227

enum_netprint_en = c_int # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_none = 0 # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_name = (netprint_none + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_index = (netprint_name + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_ptr = (netprint_index + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_nname = (netprint_ptr + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_debug = (netprint_nname + 1) # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

netprint_t = enum_netprint_en # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 239

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 245
if hasattr(_libs['spiceparser'], 'netlist_init'):
    netlist_init = _libs['spiceparser'].netlist_init
    netlist_init.argtypes = [POINTER(netlist_t)]
    netlist_init.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 246
if hasattr(_libs['spiceparser'], 'netlist_register_entity'):
    netlist_register_entity = _libs['spiceparser'].netlist_register_entity
    netlist_register_entity.argtypes = [POINTER(netlist_t), c_int, c_int, c_int, c_int, String, c_int]
    netlist_register_entity.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 247
if hasattr(_libs['spiceparser'], 'netlist_print_nodep'):
    netlist_print_nodep = _libs['spiceparser'].netlist_print_nodep
    netlist_print_nodep.argtypes = [POINTER(netlist_t), netprint_t, POINTER(None), POINTER(None), String]
    netlist_print_nodep.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 248
if hasattr(_libs['spiceparser'], 'netlist_parse_input'):
    netlist_parse_input = _libs['spiceparser'].netlist_parse_input
    netlist_parse_input.argtypes = [POINTER(scanner_t), String, POINTER(netlist_param_t)]
    netlist_parse_input.restype = netlist_input_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 249
if hasattr(_libs['spiceparser'], 'netlist_release'):
    netlist_release = _libs['spiceparser'].netlist_release
    netlist_release.argtypes = [POINTER(netlist_t)]
    netlist_release.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 250
if hasattr(_libs['spiceparser'], 'netlist_free'):
    netlist_free = _libs['spiceparser'].netlist_free
    netlist_free.argtypes = [POINTER(netlist_t)]
    netlist_free.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 251
if hasattr(_libs['spiceparser'], 'netlist_newdev_fromnode'):
    netlist_newdev_fromnode = _libs['spiceparser'].netlist_newdev_fromnode
    netlist_newdev_fromnode.argtypes = [POINTER(netlist_t), c_int, dev_input_t, POINTER(termptr_t)]
    netlist_newdev_fromnode.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 252
if hasattr(_libs['spiceparser'], 'netlist_debug_input'):
    netlist_debug_input = _libs['spiceparser'].netlist_debug_input
    netlist_debug_input.argtypes = [POINTER(None), netlist_input_t]
    netlist_debug_input.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 253
if hasattr(_libs['spiceparser'], 'netlist_debug'):
    netlist_debug = _libs['spiceparser'].netlist_debug
    netlist_debug.argtypes = [POINTER(None), POINTER(netlist_t)]
    netlist_debug.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 254
if hasattr(_libs['spiceparser'], 'netlist_debug_'):
    netlist_debug_ = _libs['spiceparser'].netlist_debug_
    netlist_debug_.argtypes = [POINTER(None), POINTER(netlist_t), c_int]
    netlist_debug_.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 255
if hasattr(_libs['spiceparser'], 'netlist_node'):
    netlist_node = _libs['spiceparser'].netlist_node
    netlist_node.argtypes = [POINTER(netlist_t), String, POINTER(None)]
    netlist_node.restype = termptr_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 256
if hasattr(_libs['spiceparser'], 'netlist_termptr'):
    netlist_termptr = _libs['spiceparser'].netlist_termptr
    netlist_termptr.argtypes = [c_int, c_int, c_int]
    netlist_termptr.restype = termptr_t

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 257
if hasattr(_libs['spiceparser'], 'netlist_node_termptr'):
    netlist_node_termptr = _libs['spiceparser'].netlist_node_termptr
    netlist_node_termptr.argtypes = [POINTER(netlist_t), termptr_t]
    netlist_node_termptr.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 258
if hasattr(_libs['spiceparser'], 'netlist_findnode'):
    netlist_findnode = _libs['spiceparser'].netlist_findnode
    netlist_findnode.argtypes = [POINTER(netlist_t), String]
    netlist_findnode.restype = c_int

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 259
if hasattr(_libs['spiceparser'], 'netlist_merge'):
    netlist_merge = _libs['spiceparser'].netlist_merge
    netlist_merge.argtypes = [POINTER(netlistfunc_t)]
    netlist_merge.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 260
if hasattr(_libs['spiceparser'], 'netlist_distribute'):
    netlist_distribute = _libs['spiceparser'].netlist_distribute
    netlist_distribute.argtypes = [POINTER(netlistfunc_t)]
    netlist_distribute.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 261
if hasattr(_libs['spiceparser'], 'netlist_fixup'):
    netlist_fixup = _libs['spiceparser'].netlist_fixup
    netlist_fixup.argtypes = [POINTER(netlistfunc_t)]
    netlist_fixup.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 262
if hasattr(_libs['spiceparser'], 'netlist_eval'):
    netlist_eval = _libs['spiceparser'].netlist_eval
    netlist_eval.argtypes = [POINTER(netlist_t)]
    netlist_eval.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 263
if hasattr(_libs['spiceparser'], 'netlist_eqn_begin'):
    netlist_eqn_begin = _libs['spiceparser'].netlist_eqn_begin
    netlist_eqn_begin.argtypes = [POINTER(netlist_t)]
    netlist_eqn_begin.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 264
if hasattr(_libs['spiceparser'], 'netlist_eqn_end'):
    netlist_eqn_end = _libs['spiceparser'].netlist_eqn_end
    netlist_eqn_end.argtypes = [POINTER(netlist_t)]
    netlist_eqn_end.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 266
if hasattr(_libs['spiceparser'], 'netlist_copyisher'):
    netlist_copyisher = _libs['spiceparser'].netlist_copyisher
    netlist_copyisher.argtypes = [POINTER(netlist_t), c_int, POINTER(c_int)]
    netlist_copyisher.restype = POINTER(netlist_t)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 267
for _lib in _libs.itervalues():
    if not hasattr(_lib, 'netlist_copyfree'):
        continue
    netlist_copyfree = _lib.netlist_copyfree
    netlist_copyfree.argtypes = [POINTER(netlist_t)]
    netlist_copyfree.restype = None
    break

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 272
if hasattr(_libs['spiceparser'], 'spice_new'):
    spice_new = _libs['spiceparser'].spice_new
    spice_new.argtypes = [POINTER(scanner_t)]
    spice_new.restype = POINTER(struct_spice_st)

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 273
if hasattr(_libs['spiceparser'], 'spice_release'):
    spice_release = _libs['spiceparser'].spice_release
    spice_release.argtypes = [POINTER(struct_spice_st)]
    spice_release.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 275
if hasattr(_libs['spiceparser'], 'spice_build'):
    spice_build = _libs['spiceparser'].spice_build
    spice_build.argtypes = [POINTER(netlist_t)]
    spice_build.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 276
if hasattr(_libs['spiceparser'], 'spice_count'):
    spice_count = _libs['spiceparser'].spice_count
    spice_count.argtypes = [POINTER(netlist_t)]
    spice_count.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist.h: 277
if hasattr(_libs['spiceparser'], 'spice_debug'):
    spice_debug = _libs['spiceparser'].spice_debug
    spice_debug.argtypes = [POINTER(None), POINTER(struct_spice_st)]
    spice_debug.restype = None

# c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 87
class struct_devgen_st(Structure):
    pass

struct_devgen_st.__slots__ = [
    'parent',
    'n',
    'v',
]
struct_devgen_st._fields_ = [
    ('parent', dev_input_t),
    ('n', termptr_t * ((1 << 3) - 1)),
    ('v', eqn_t * 8),
]

devgen_t = struct_devgen_st # c:\\Users\\satya\\src\\xcircuit-3.8\\spiceparser\\netlist_dev.h: 87
